atualização na página de teste

--- a/teste2.html
+++ b/teste2.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página teste2</h1>
+    <p>Teste Menu = A s</p>
     <a href="index.html">Ir para home</a>
 </body>
 </html>
